[package]
name = "midnight"
version = "1.0.0-rc1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

anyhow = "1.0.72"
crossterm = "0.26.1"
shell-words = "1.1.0"
syntect = "5.0.0"
ratatui = { package = "ratatui", version = "0.21.0", features = ["all-widgets"]}
tui-textarea = { path = "tui-textarea", features = ["ratatui-crossterm", "search"], default-features=false }
ansi_term = "0.12.1"


pandoc = { version = "0.8.10", optional=true }

whatsappweb-eta = { version="0.4.0", optional=true}


[features]
# DocumentX: Import and export documents using Pandoc
documentx = ["pandoc"]

# WasGood Applet: WhatsApp Web client
wasgood = ["whatsappweb-eta"]
