[package]
name = "midnight"
version = "1.0.0-rc1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

anyhow = "1.0.72"
crossterm = "0.26.1"
shell-words = "1.1.0"
syntect = "5.0.0"
ratatui = { package = "ratatui", version = "0.21.0", features = ["all-widgets"]}
tui-textarea = { path = "tui-textarea", features = ["ratatui-crossterm", "search"], default-features=false }
ansi_term = "0.12.1"


pandoc = { version = "0.8.10", optional=true }
whatsappweb = { git="https://github.com/djtech-dev/whatsappweb-rs.git", optional=true}
git2 = { version="0.17.2", optional=true }
similar = { version="2.2.1", optional=true }
octocrab = { version="0.27.0", optional=true }

[features]
# DocumentX: Import and export documents using Pandoc
documentx = ["pandoc"]

# WasGood Applet: WhatsApp Web client
wasgood = ["whatsappweb"]

# Master: Git client
master = ["git2"]
# MasterGH: GitHub extension for Master
master_github = ["octocrab"]

# cooldiff: Analyze the differences between two files
cooldiff = ["similar"]
